Tooltip z-index fixed

--- a/src/main/resources/cz/larpovadatabaze/components/page/css/custom.css
+++ b/src/main/resources/cz/larpovadatabaze/components/page/css/custom.css
@@ -1605,7 +1605,7 @@ text-align: center;
 /**/
 .sky-form .tooltip {
 	position: absolute;
-	z-index: 1;
+	z-index: 2;
 	left: -9999px;
 	padding: 2px 8px 3px;
 	font-size: 11px;
